--- a/crm_claim_type/views/crm_claim.xml
+++ b/crm_claim_type/views/crm_claim.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<openerp>
-    <data>
+<odoo>
         <record id="crm_case_claims_form_view" model="ir.ui.view">
             <field name="name">CRM - Claims Form</field>
             <field name="model">crm.claim</field>
@@ -11,6 +10,5 @@
                 </xpath>
             </field>
         </record>
-    </data>
-</openerp>
+</odoo>
 
