--- a/crm_claim_type/views/crm_claim_stage.xml
+++ b/crm_claim_type/views/crm_claim_stage.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<openerp>
-    <data>
+<odoo>
         <record id="crm_claim.crm_claim_category_claim0" model="ir.actions.act_window">
             <field name="context">
                 {"search_default_user_id":uid, "stage_type":'claim'}
@@ -54,5 +53,4 @@
             action="crm_claim.crm_claim_stage_act"
             parent="crm_claim.menu_config_claim"
             sequence="20"/>
-    </data>
-</openerp>
+</odoo>
